--- a/src/components/Badge/styling/Badge.scss
+++ b/src/components/Badge/styling/Badge.scss
@@ -38,7 +38,7 @@
 
 .str-chat__badge--variant-inverse {
   background: var(--badge-bg-inverse);
-  color: var(--badge-text-inverse);
+  color: var(--badge-text-on-inverse);
   border-color: var(--badge-border);
 }
 
